--- a/StudentInformationMVC/StudentInformationMVC.csproj
+++ b/StudentInformationMVC/StudentInformationMVC.csproj
@@ -152,6 +152,10 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="GlobalVariables.cs" />
+    <Compile Include="Models\AssignmentScoresViewModel.cs" />
+    <Compile Include="Models\AssignmentViewModel.cs" />
+    <Compile Include="Models\StudentViewModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -196,7 +200,6 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="Models\" />
     <Folder Include="Views\Student\" />
   </ItemGroup>
   <ItemGroup>
