--- a/StudentInformationMVC/StudentInformationMVC.csproj
+++ b/StudentInformationMVC/StudentInformationMVC.csproj
@@ -211,10 +211,11 @@
     <Content Include="Views\View.cshtml" />
     <Content Include="Views\Assignment\View.cshtml" />
     <Content Include="Views\AssignmentScores\View.cshtml" />
+    <Content Include="Views\Student\View.cshtml" />
+    <Content Include="Views\Student\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="Views\Student\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff2" />
