--- a/StudentInformationMVC/StudentInformationMVC.csproj
+++ b/StudentInformationMVC/StudentInformationMVC.csproj
@@ -213,6 +213,7 @@
     <Content Include="Views\AssignmentScores\View.cshtml" />
     <Content Include="Views\Student\View.cshtml" />
     <Content Include="Views\Student\Index.cshtml" />
+    <Content Include="Views\Assignment\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
